fixing page alignment

--- a/src/main/content/_assets/css/developer.scss
+++ b/src/main/content/_assets/css/developer.scss
@@ -92,7 +92,6 @@
 
 #componentsText{
     margin-top: 30px;
-    text-align:center;
 }
 
 .usage_video{
@@ -162,4 +161,8 @@
 
 .topBorder{
   border-top:1px solid gray;
+}
+
+.page_description{
+  text-align: center !important;
 }
